新增UidGenerator功能测试

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
   servlet:
     context-path: / #设置应用的目录.  前缀需要带/, 无需设置后缀, 示例 【 /xxx 】 or 【 / 】
 spring:
+  main:
+    allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
   thymeleaf:
     suffix: .html
     prefix=classpath: /templates/
@@ -25,3 +27,18 @@ logging:
     com.example.demo: debug   #该项目日志级别，当需要打印sql时请开启为debug
   file:
     path: ./logs
+
+
+
+#uid:
+#  timeBits: 30             # 时间位, 默认:30
+#  workerBits: 16           # 机器位, 默认:16
+#  seqBits: 7               # 序列号, 默认:7
+#  epochStr: "2019-02-20"   # 初始时间, 默认:"2019-02-20"
+#  enableBackward: true    # 是否容忍时钟回拨, 默认:true
+#  maxBackwardSeconds: 1    # 时钟回拨最长容忍时间（秒）, 默认:1
+#  CachedUidGenerator:     # CachedUidGenerator相关参数
+#    boostPower: 3          # RingBuffer size扩容参数, 可提高UID生成的吞吐量, 默认:3
+#    paddingFactor: 50      # 指定何时向RingBuffer中填充UID, 取值为百分比(0, 100), 默认为50
+#    #scheduleInterval: 60    # 默认:不配置此项, 即不使用Schedule线程. 如需使用, 请指定Schedule线程时间间隔, 单位:秒
+
