--- a/pom.xml
+++ b/pom.xml
@@ -95,21 +95,13 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-<!--            <version>5.1.35</version>-->
         </dependency>
-
 
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatisplus.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.baomidou</groupId>-->
-<!--            <artifactId>mybatis-plus</artifactId>-->
-<!--            <version>${mybatisplus.version}</version>-->
-<!--        </dependency>-->
-
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -117,16 +109,15 @@
             <version>31.0.1-jre</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-elasticsearch</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.baidu.fsg</groupId>
-            <artifactId>uid-generator</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>com.github.kefaming</groupId>
+            <artifactId>uid-generator-boot-starter</artifactId>
+            <version>1.0.0.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.mybatis</groupId>
@@ -138,24 +129,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!--        <dependency>-->
-<!--            <groupId>com.github.wujun234</groupId>-->
-<!--            <artifactId>uid-generator-spring-boot-starter</artifactId>-->
-<!--            <version>1.0.3.RELEASE</version>-->
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>org.mybatis</groupId>-->
-<!--                    <artifactId>mybatis</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>org.mybatis</groupId>-->
-<!--                    <artifactId>mybatis-spring</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
-
-<!--        </dependency>-->
-
 
 
     </dependencies>
